fixes size issue on mobile and tablet

--- a/ui.frontend/src/main/webpack/ewallet/styles/components/component-styles.scss
+++ b/ui.frontend/src/main/webpack/ewallet/styles/components/component-styles.scss
@@ -34,7 +34,19 @@
 
       a {
         img {
-          width: 168px;
+          max-width: 150px;
+          height: 45px;
+          object-fit: contain;
+
+          @include respond-to-min($tablet) {
+            max-width: 160px;
+            height: 48px;
+          }
+
+          @include respond-to-min($desktop) {
+            width: 168px;
+            height: 50px;
+          }
         }
       }
     }
